--- a/src/app/employer/post-job-openings/post-job-openings.component.html
+++ b/src/app/employer/post-job-openings/post-job-openings.component.html
@@ -1,1 +1,79 @@
-<p>post-job-openings works!</p>
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
+<section style="padding-top: 100px;">
+
+
+<div class="contact1">
+    <div class="container-contact1">
+        <div class="contact1-pic js-tilt" data-tilt>
+            <img src="assets/images/img-01.png" alt="IMG">
+        </div>
+
+        <form class="contact1-form validate-form">
+            <span class="contact1-form-title">
+                Job Posting
+            </span>
+
+            <div class="wrap-input1 validate-input" data-validate = "Name is required">
+                <input class="input1" type="text" name="name" placeholder="Name">
+                <span class="shadow-input1"></span>
+            </div>
+
+            <div class="wrap-input1 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+                <input class="input1" type="text" name="email" placeholder="Email">
+                <span class="shadow-input1"></span>
+            </div>
+
+            <div class="wrap-input1 validate-input" data-validate = "Organization name required">
+                <input class="input1" type="text" name="organization name" placeholder="organization name">
+                <span class="shadow-input1"></span>
+            </div>
+            
+            <div class="wrap-input1 validate-input" data-validate = "Designation required">
+                <input class="input1" type="text" name="designation" placeholder="designation name">
+                <span class="shadow-input1"></span>
+            </div>
+            
+          
+            <div class="wrap-input1 validate-input">
+                
+                <input class="input1" type="text" name="skill1" placeholder="skills">
+                <span>
+                    <!-- <button (click)="onclick()"><i class="fa fa-user text-muted"></i></button> -->
+                </span>
+                <span class="shadow-input1"></span>
+            </div>
+            <!-- <div class="wrap-input1 validate-input" *ngIf="basic">
+                <input class="input1" type="text" name="skill2" placeholder="skill2">
+                <span class="shadow-input1"></span>
+            </div> -->
+            <div class="wrap-input1 validate-input" data-validate = "Designation required">
+                <input class="input1" type="text" name="designation" placeholder="location">
+                <span class="shadow-input1"></span>
+            </div>
+            <div class="wrap-input1 validate-input" data-validate = "Designation required">
+                <input class="input1" type="text" name="designation" placeholder="salary">
+                <span class="shadow-input1"></span>
+            </div>
+
+
+
+
+            <div class="wrap-input1 validate-input" data-validate = "Message is required">
+                <textarea class="input1" name="message" placeholder="description"></textarea>
+                <span class="shadow-input1"></span>
+            </div>
+
+            <div class="container-contact1-form-btn">
+                <button class="contact1-form-btn">
+                    <span>
+                        Submit
+                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                    </span>
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
+</section>
