--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,1 +1,245 @@
-<p>about works!</p>
+
+
+
+<section style="padding-top: 85px;">
+
+    <section id="hero" class="hero">
+      <div class="container position-relative">
+        <div class="row gy-5" data-aos="fade-in">
+          <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
+            <h2 class="text">Welcome To Jobista</h2>
+            <p style="margin-top: -70px;" class="headingp">Enabling Young minds to Achieve Their Dreams!</p>
+            <div class="d-flex justify-content-center justify-content-lg-start">
+              <a href="#about" class="btn-get-started">Get Started</a>
+              <a href="https://www.youtube.com/watch?v=zhpcgpqWc1Q"
+                class=" glightbox btn-watch-video d-flex align-items-center"><i class="fa fa-play-circle"></i><span>Watch
+                  Video</span></a>
+            </div>
+          </div>
+          <div class="col-lg-6 order-1 order-lg-2">
+            <img src="assets/images/hero-img.svg" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="100">
+          </div>
+        </div>
+      </div>
+    
+      <div class="icon-boxes position-relative">
+        <div class="container position-relative">
+          <div class="row gy-4 mt-5">
+    
+            <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
+              <div class="icon-box">
+                <div class="icon"><i class="fa fa-easel"></i></div>
+                <h4 class="title"><a href="" class="stretched-link">Understanding you</a></h4>
+              </div>
+            </div>
+            <!--End Icon Box -->
+    
+            <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
+              <div class="icon-box">
+                <div class="icon"><i class="fa fa-gem"></i></div>
+                <h4 class="title"><a href="" class="stretched-link">Determining a Best-Fit career</a></h4>
+              </div>
+            </div>
+            <!--End Icon Box -->
+    
+            <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
+              <div class="icon-box">
+                <div class="icon"><i class="fa fa-geo-alt"></i></div>
+                <h4 class="title"><a href="" class="stretched-link">Plan of Action</a></h4>
+              </div>
+            </div>
+            <!--End Icon Box -->
+    
+            <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="500">
+              <div class="icon-box">
+                <div class="icon"><i class="fa fa-command"></i></div>
+                <h4 class="title"><a href="" class="stretched-link">Shaping Your Career Destiny</a></h4>
+              </div>
+            </div>
+            <!--End Icon Box -->
+    
+          </div>
+        </div>
+      </div>
+    
+    
+    </section>
+
+</section>
+
+    
+<div class="container">
+    <div class="row">
+        <div class="heading-title text-center">
+            <h3 class="text-uppercase">Our professionals </h3>
+            <p class="p-top-30 half-txt">Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. </p>
+        </div>
+
+        <div class="col-md-4 col-sm-4">
+            <div class="team-member">
+                <div class="team-img">
+                    <img src="assets/images/DIV.jpeg" alt="team member" style="height: 400px;">
+                </div>
+                <div class="team-hover">
+                    <div class="desk">
+                        <h4>Hi There !</h4>
+                        <p>I love to introduce myself as a hardcore Web Designer.</p>
+                    </div>
+                    <div class="s-link">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="team-title">
+                <h5>DIVYA MAKHIJA</h5>
+                <span>WEB DEVELOPER</span>
+            </div>
+        </div>
+        <div class="col-md-4 col-sm-4">
+            <div class="team-member">
+                <div class="team-img">
+                    <img src="assets/images/vanshii.jpeg" alt="team member" style="height: 400px;" >
+                </div>
+                <div class="team-hover">
+                    <div class="desk">
+                        <h4>Hello World</h4>
+                        <p>I love to introduce myself as a hardcore Web Designer.</p>
+                    </div>
+                    <div class="s-link">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="team-title">
+                <h5>VANSHIKA MAKHIJANI</h5>
+                <span>WEB DEVELOPER</span>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="team-member">
+                <div class="team-img">
+                    <img src="assets/images/JAS.jpeg" alt="team member" style="height: 400px;">
+                </div>
+                <div class="team-hover">
+                    <div class="desk">
+                        <h4>I love to design</h4>
+                        <p>I love to introduce myself as a hardcore Web Designer.</p>
+                    </div>
+                    <div class="s-link">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="team-title">
+                <h5>JASMINE DHIRWANI</h5>
+                <span>WEB DEVELOPER</span>
+            </div>
+        </div>
+
+    </div>
+
+</div>
+
+<section class="featured-job-area feature-padding">
+    <div class="container">
+        <!-- Section Tittle -->
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-tittle text-center">
+                    <span>Recent Job</span>
+                    <h2>Featured Jobs</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-xl-10">
+                <!-- single-job-content -->
+                <div class="single-job-items mb-30">
+                    <div class="job-items">
+                        <div class="company-img">
+                            <a href="job_details.html"><img src="assets/images/job-list1.png" alt="" ></a>
+                        </div>
+                        <div class="job-tittle">
+                            <a href="job_details.html"><h4>Digital Marketer</h4></a>
+                            <ul>
+                                <li>Creative Agency</li>
+                                <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
+                                <li>$3500 - $4000</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="items-link f-right">
+                        <a href="job_details.html">Full Time</a>
+                        <span>7 hours ago</span>
+                    </div>
+                </div>
+                <!-- single-job-content -->
+                <div class="single-job-items mb-30">
+                    <div class="job-items">
+                        <div class="company-img">
+                            <a href="job_details.html"><img src="assets/images/job-list2.png" alt=""></a>
+                        </div>
+                        <div class="job-tittle">
+                            <a href="job_details.html"><h4>Digital Marketer</h4></a>
+                            <ul>
+                                <li>Creative Agency</li>
+                                <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
+                                <li>$3500 - $4000</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="items-link f-right">
+                        <a href="job_details.html">Full Time</a>
+                        <span>7 hours ago</span>
+                    </div>
+                </div>
+                 <!-- single-job-content -->
+                <div class="single-job-items mb-30">
+                    <div class="job-items">
+                        <div class="company-img">
+                            <a href="job_details.html"><img src="assets/images/job-list3.png" alt=""></a>
+                        </div>
+                        <div class="job-tittle">
+                            <a href="job_details.html"><h4>Digital Marketer</h4></a>
+                            <ul>
+                                <li>Creative Agency</li>
+                                <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
+                                <li>$3500 - $4000</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="items-link f-right">
+                        <a href="job_details.html">Full Time</a>
+                        <span>7 hours ago</span>
+                    </div>
+                </div>
+                 <!-- single-job-content -->
+                <div class="single-job-items mb-30">
+                    <div class="job-items">
+                        <div class="company-img">
+                            <a href="job_details.html"><img src="assets/images/job-list4.png" alt=""></a>
+                        </div>
+                        <div class="job-tittle">
+                            <a href="job_details.html"><h4>Digital Marketer</h4></a>
+                            <ul>
+                                <li>Creative Agency</li>
+                                <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
+                                <li>$3500 - $4000</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="items-link f-right">
+                        <a href="job_details.html">Full Time</a>
+                        <span>7 hours ago</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
