completed job opening

--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -25,7 +25,7 @@
                     <a href (click)="false" class="nav-link nav-item active" ngbDropdownToggle style="border: 0;">JOBS</a>
                     <div ngbDropdownMenu>
                         <button ngbDropdownItem routerLink="/job" class="color" routerLinkActive="current">POST JOB</button>
-                        <button ngbDropdownItem routerLink="/foster" class="color" routerLinkActive="current">GET JOB</button>
+                        <button ngbDropdownItem routerLink="/opening" class="color" routerLinkActive="current">GET JOB</button>
                     </div>
                 </li>
             </ul>
