Completed with anuthentication and Dashboard Navigation

--- a/src/app/employee/job-openings/job-openings.component.html
+++ b/src/app/employee/job-openings/job-openings.component.html
@@ -1,3 +1,4 @@
+<app-employee-dashboard></app-employee-dashboard>
 <div class="job-listing-area pt-120 pb-120">
     <div class="container">
         <div class="row">
