--- a/src/app/employee/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/employee/employee-dashboard/employee-dashboard.component.html
@@ -19,9 +19,9 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-0">.
             <a href="" class="nav-item nav-link active" routerLink="" routerLinkActive="current">PREFERENCES</a>
-            <a href="" class="nav-item nav-link active" routerLink=""
+            <a href="" class="nav-item nav-link active" routerLink="/opening"
              routerLinkActive="current">JOB OPENINGS</a>
-            <a href="" class="nav-item nav-link active" routerLink="/signup" routerLinkActive="current">RAISE QUERY</a>
+            <a href="" class="nav-item nav-link active" routerLink="/query" routerLinkActive="current">RAISE QUERY</a>
             
             
             <!-- <a href="contact.html" class="nav-item nav-link nav-contact bg-primary text-white px-5 ms-lg-5">Contact <i class="bi bi-arrow-right"></i></a> -->
