--- a/src/app/employer/employer-dashboard/employer-dashboard.component.html
+++ b/src/app/employer/employer-dashboard/employer-dashboard.component.html
@@ -18,10 +18,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-0">.
-            <a href="" class="nav-item nav-link active" routerLink="/jobOpenings" routerLinkActive="current">POST OPENINGS</a>
-            <a href="" class="nav-item nav-link active" routerLink="/trackApplication"
+            <a href="" class="nav-item nav-link active" routerLink="/jobOpening" routerLinkActive="current">POST OPENINGS</a>
+            <a href="" class="nav-item nav-link active" routerLink="/track"
              routerLinkActive="current">TRACK APPLICATION</a>
-            <a href="" class="nav-item nav-link active" routerLink="/signup" routerLinkActive="current">INBOX</a>
+            <a href="" class="nav-item nav-link active" routerLink="/signUp" routerLinkActive="current">INBOX</a>
         </div>
     </div>
 </nav>
