added job opening and tracking by divya

--- a/src/app/employee/job-openings/job-openings.component.html
+++ b/src/app/employee/job-openings/job-openings.component.html
@@ -205,7 +205,8 @@
                                 </div>
                             </div>
                             <div class="items-link items-link2 f-right">
-                                <a href="job_details.html">Full Time</a>
+                                <a href="job_details.html">Interested</a>
+                                <a href="" routerLink="/query">Raise query</a>
                                 <span>7 hours ago</span>
                             </div>
                         </div>
@@ -227,7 +228,8 @@
                                 </div>
                             </div>
                             <div class="items-link items-link2 f-right">
-                                <a href="job_details.html">Full Time</a>
+                                <a href="job_details.html">Interested</a>
+                                <a routerLink="/query">Raise query</a>
                                 <span>7 hours ago</span>
                             </div>
                         </div>
@@ -249,7 +251,8 @@
                                 </div>
                             </div>
                             <div class="items-link items-link2 f-right">
-                                <a href="job_details.html">Full Time</a>
+                                <a href="job_details.html">Interested</a>
+                                <a href="/query" routerLink="/query" routerLinkActive="true">Raise query</a>
                                 <span>7 hours ago</span>
                             </div>
                         </div>
@@ -271,7 +274,8 @@
                                 </div>
                             </div>
                             <div class="items-link items-link2 f-right">
-                                <a href="job_details.html">Full Time</a>
+                                <a href="job_details.html">Interested</a>
+                                <a href="job_details.html">Raise query</a>
                                 <span>7 hours ago</span>
                             </div>
                         </div>
@@ -293,7 +297,8 @@
                                 </div>
                             </div>
                             <div class="items-link items-link2 f-right">
-                                <a href="job_details.html">Full Time</a>
+                                <a href="job_details.html">Interested</a>
+                                <a href="job_details.html">Raise query</a>
                                 <span>7 hours ago</span>
                             </div>
                         </div>
@@ -315,7 +320,8 @@
                                 </div>
                             </div>
                             <div class="items-link items-link2 f-right">
-                                <a href="job_details.html">Full Time</a>
+                                <a href="job_details.html">Interested</a>
+                                <a href="job_details.html">Raise query</a>
                                 <span>7 hours ago</span>
                             </div>
                         </div>
@@ -337,7 +343,8 @@
                                 </div>
                             </div>
                             <div class="items-link items-link2 f-right">
-                                <a href="job_details.html">Full Time</a>
+                                <a href="job_details.html">Interested</a>
+                                <a href="job_details.html">Raise query</a>
                                 <span>7 hours ago</span>
                             </div>
                         </div>
