--- a/src/app/employer/track-application/track-application.component.html
+++ b/src/app/employer/track-application/track-application.component.html
@@ -1,1 +1,125 @@
-<p>track-application works!</p>
+<section style="padding-top: 100px;">
+
+
+<h4>All Users</h4>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>User</th>
+            <th>Status</th>
+            <th>Location</th>
+            <th>Email</th>
+            <th>Congratulate</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                <div class="d-flex align-items-center">
+                    <img src="assets/images/user1.jpg" class="circle-img circle-img--small mr-2" alt="User Img">
+                    <div class="user-info__basic">
+                        <h5 class="mb-0">Kiran Acharya</h5>
+                        <p class="text-muted mb-0">@kiranacharyaa</p>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="d-flex align-items-baseline">
+                    <h4 class="mr-1">$1,253</h4><small class="text-success"><i class="fa fa-arrow-up"></i>5%</small>
+                </div>
+            </td>
+            <td>Bangalore</td>
+            <td>kiran@kiranmail.com</td>
+            <td>
+                <button class="btn btn-success btn-sm">view details</button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="d-flex align-items-center">
+                    <img src="assets/images/user2.jpg" class="circle-img circle-img--small mr-2" alt="User Img">
+                    <div class="user-info__basic">
+                        <h5 class="mb-0">Sandeep Sandy</h5>
+                        <p class="text-muted mb-0">@sandeep</p>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="d-flex align-items-baseline">
+                    <h4 class="mr-1">$1,051</h4><small class="text-success"><i class="fa fa-arrow-up"></i>5%</small>
+                </div>
+            </td>
+            <td>Bangalore</td>
+            <td>sandeep@sandeepmail.com</td>
+            <td>
+                <button class="btn btn-success btn-sm">view details</button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="d-flex align-items-center">
+                    <img src="assets/images/user3.jpg" class="circle-img circle-img--small mr-2" alt="User Img">
+                    <div class="user-info__basic">
+                        <h5 class="mb-0">John Doe</h5>
+                        <p class="text-muted mb-0">@johndoe</p>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="d-flex align-items-baseline">
+                    <h4 class="mr-1">$1,012</h4><small class="text-success"><i class="fa fa-arrow-up"></i>5%</small>
+                </div>
+            </td>
+            <td>Bangalore</td>
+            <td>kiran@kiranmail.com</td>
+            <td>
+                <button class="btn btn-success btn-sm ">view details</button>
+                <button class="btn btn-success btn-sm mx-3">send email </button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="d-flex align-items-center">
+                    <img src="assets/images/user4.jpg" class="circle-img circle-img--small mr-2" alt="User Img">
+                    <div class="user-info__basic">
+                        <h5 class="mb-0">John Noakes</h5>
+                        <p class="text-muted mb-0">@johnnoakes</p>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="d-flex align-items-baseline">
+                    <h4 class="mr-1">$986</h4><small class="text-success"><i class="fa fa-arrow-up"></i>5%</small>
+                </div>
+            </td>
+            <td>Bangalore</td>
+            <td>kiran@kiranmail.com</td>
+            <td>
+                <button class="btn btn-success btn-sm">view details</button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="d-flex align-items-center">
+                    <img src="assets/images/user5.jpg" class="circle-img circle-img--small mr-2" alt="User Img">
+                    <div class="user-info__basic">
+                        <h5 class="mb-0">Tom harry</h5>
+                        <p class="text-muted mb-0">@tomharry</p>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="d-flex align-items-baseline">
+                    <h4 class="mr-1">$951</h4><small class="text-success"><i class="fa fa-arrow-up"></i>5%</small>
+                </div>
+            </td>
+            <td>Bangalore</td>
+            <td>kiran@kiranmail.com</td>
+            <td>
+                <button class="btn btn-success btn-sm">view details</button>
+            </td>
+        </tr>
+    </tbody>
+</table>
+</section>
