--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -7,7 +7,7 @@
       <div class="container position-relative">
         <div class="row gy-5" data-aos="fade-in">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
-            <h2 class="text">Welcome To Jobista</h2>
+            <h2 class="text">Welcome To Jobinsta</h2>
             <p style="margin-top: -70px;" class="headingp">Enabling Young minds to Achieve Their Dreams!</p>
             <div class="d-flex justify-content-center justify-content-lg-start">
               <a href="#about" class="btn-get-started">Get Started</a>
