Modified post Job Openings Page

--- a/src/app/employee/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/employee/employee-dashboard/employee-dashboard.component.html
@@ -18,7 +18,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-0">.
-            <a href="" class="nav-item nav-link active" routerLink="" routerLinkActive="current">PREFERENCES</a>
+            <!-- <a href="" class="nav-item nav-link active" routerLink="" routerLinkActive="current">PREFERENCES</a> -->
             <a href="" class="nav-item nav-link active" routerLink="/opening"
              routerLinkActive="current">JOB OPENINGS</a>
             <a href="" class="nav-item nav-link active" routerLink="/query" routerLinkActive="current">RAISE QUERY</a>
