--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -29,7 +29,7 @@
                     </div>
                 </li>
             </ul>
-            <a href="" class="nav-item nav-link active" routerLink="/signup" routerLinkActive="current">LOG IN</a>
+            <a href="" class="nav-item nav-link active" routerLink="/login" routerLinkActive="current">LOG IN</a>
             <a href="" class="nav-item nav-link active" routerLink="/register" routerLinkActive="current">Register</a>
             
             
