--- a/src/app/employer/post-job-openings/post-job-openings.component.html
+++ b/src/app/employer/post-job-openings/post-job-openings.component.html
@@ -18,15 +18,6 @@
                 Job Posting
             </span>
 
-            <div class="wrap-input1 validate-input" >
-                <input class="input1" type="text" name="name" placeholder="Name" formControlName="name">
-                <span class="shadow-input1"></span>
-            </div>
-
-            <div class="wrap-input1 validate-input">
-                <input class="input1" type="text" name="email" placeholder="Email" formControlName="email">
-                <span class="shadow-input1"></span>
-            </div>
 
             <div class="wrap-input1 validate-input" >
                 <input class="input1" type="text" name="organization name" placeholder="organization name" formControlName="organization">
@@ -37,22 +28,23 @@
                 <input class="input1" type="text" name="designation" placeholder="designation name" formControlName="designation">
                 <span class="shadow-input1"></span>
           
-                <div class="">
-                    <!-- <div class="col"> -->
-                        <div ngbDropdown>
-                            <button type="button" class="" id="dropdownBasic1" ngbDropdownToggle>
-                                SKILLS:
-                            </button>
-                            <div ngbDropdownMenu>
-                                <!-- <button type="button" *ngFor="let category of categories" ngbDropdownItem  (click)="selectSkill(skill)">{{category.categoryName }}</button> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            <!-- </div> -->
-            <div class="wrap-input1 validate-input" data-validate = "location required">
-                <input class="input1" type="text" name="location" placeholder="location" formControlName="location">
+            <div class="wrap-input1 validate-input">
+                <input type="text" id="skills" class="input1 form-control mt-3" placeholder="skills"
+                    [inputFormatter]="formatterSkills" [resultFormatter]="formatterSkills"
+                formControlName="skills" [ngbTypeahead]="searchSkills" (selectItem)="selectSkills($event)"/>
                 <span class="shadow-input1"></span>
+            </div>
+        </div>
+            <div class="wrap-input1 validate-input" data-validate = "location required">
+                <input type="text" id="locations" class="input1 form-control" placeholder="locations"
+                [inputFormatter]="formatterLocations" [resultFormatter]="formatterLocations"
+            formControlName="locations" [ngbTypeahead]="searchLocations" (selectItem)="selectLocations($event)"/>                <span class="shadow-input1"></span>
+            </div>
+
+            <div class="wrap-input1 validate-input" data-validate = "location required">
+                <input type="text" id="languages" class="input1 form-control" placeholder="languages"
+                [inputFormatter]="formatterLanguages" [resultFormatter]="formatterLanguages"
+            formControlName="languages" [ngbTypeahead]="searchLanguages" (selectItem)="selectLanguages($event)"/>                <span class="shadow-input1"></span>
             </div>
 
 
@@ -62,22 +54,11 @@
             </div>
 
             <div class="wrap-input1 validate-input" >
-                <input class="input1" type="text" name="language1" placeholder="language" formControlName="language1">
-            </div>
-
-            <div class="wrap-input1 validate-input" >
-                <input class="input1" type="text" name="language3" placeholder="language" *ngIf="this.basic==true" formControlName="language3">
-                <span class="shadow-input1"></span>
-            </div>
-    
-
-            <div class="wrap-input1 validate-input">
-                <textarea class="input1" name="description" placeholder="description" formControlName="description"></textarea>
-                <span class="shadow-input1"></span>
+                <input class="input1" type="text" name="language1" placeholder="period" formControlName="Period">
             </div>
 
             <div class="container-contact1-form-btn">
-                <button class="contact1-form-btn">
+                <button class="contact1-form-btn" (click)="submit()">
                     <span>
                         Submit
                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
